--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,6 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: podhrmic/rust-sel4-sel4cp-demo:latest
+          options: -v ${{ github.workspace }}:/work
           run: |
             ls -al
