Added timer and interface crates [WIP]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ members = [
     "crates/ethernet-interface-types",
     "crates/eth-driver",
     "crates/eth-client",
+    "crates/timer",
+    "crates/timer-interface-types"
 ]
