--- a/crates/eth-driver/Cargo.toml
+++ b/crates/eth-driver/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 license = "BSD-2-Clause"
 
 [dependencies]
-ethernet-interface-types = { path = "../interfaces/ethernet-interface-types" }
-sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "0997c8d54426d590a59b9894bfac9d47d804188e", default-features = false }
+sel4cp.workspace = true
+sel4-shared-ring-buffer.workspace = true
+eth-driver-interface = { path = "../interfaces/ethernet-interface-types" }
