--- a/crates/eth-client/Cargo.toml
+++ b/crates/eth-client/Cargo.toml
@@ -11,3 +11,4 @@ sel4-shared-ring-buffer.workspace = true
 eth-driver-interface = { path = "../interfaces/ethernet-interface-types" }
 smoltcp = { version = "0.10.0", default-features = false, features = ["log","proto-ipv4","socket-tcp","socket-udp","medium-ethernet","medium-ip"] }
 numtoa = "0.2.4"
+timer-interface-types = { path = "../interfaces/timer-interface-types" }
