--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,7 @@ members = [
 ]
 
 [workspace.dependencies]
-sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "0997c8d54426d590a59b9894bfac9d47d804188e", default-features = false }
-sel4-shared-ring-buffer = { git = "https://github.com/protoben/rust-seL4", rev = "58ae0cfe5cf7a5c8dc13f315062ec94dee784c47", default-features = false }
+sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
+sel4-shared-ring-buffer = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
+sel4-bounce-buffer-allocator = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
+sel4-externally-shared = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
