--- a/crates/assistant/Cargo.toml
+++ b/crates/assistant/Cargo.toml
@@ -7,6 +7,7 @@ license = "BSD-2-Clause"
 
 [dependencies]
 sel4cp = { workspace = true, features = ["alloc"] }
+sel4-externally-shared = { workspace = true, features = ["unstable", "alloc"]}
 banscii-artist-interface-types = { path = "../artist/interface-types" }
 banscii-assistant-core = { path = "./core" }
 uart-interface-types = { path = "../interfaces/uart-interface-types" }
