--- a/crates/eth-driver/Cargo.toml
+++ b/crates/eth-driver/Cargo.toml
@@ -9,3 +9,5 @@ license = "BSD-2-Clause"
 sel4cp.workspace = true
 sel4-shared-ring-buffer.workspace = true
 eth-driver-interface = { path = "../interfaces/ethernet-interface-types" }
+point-to-point-phy = { path = "../point-to-point-phy" }
+heapless = "0.7.16"
